# libADLMIDI

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  README.md  banks.ini  libADLMIDIConfig.cmake.in
.github/workflows/: dos-ci.yml  macos-ci.yml  ubuntu-ci.yml  windows-ci.yml  windows-winmm-ci.yml
.semaphore/: semaphore.yml
android/: Android.mk
cmake/: ci_windows_winmm_mingw_toolchain_vanilla.cmake  ci_windows_winmm_mingw_toolchain_x32.cmake  ci_windows_winmm_mingw_toolchain_x64.cmake
cmake/checks/: cpp14.cpp
cmake/djgpp/: djgpp-cmake-core.sh
cmake/win-ci/: winmm-drivers.cmd
examples/golang-mid2wav/: .gitignore  README.txt  mid2wav.go
examples/python-alsa/: playmidi.py
examples/python-pyaudio/: playmidi.py
examples/sd2_audio/: sdl2_sample.c
examples/sdl2_audio/: CMakeLists.txt
examples/sdl2_mixer/: CMakeLists.txt  sdl2_mixer_example.c
fm_banks/: LICENSE-AIL2.txt  LICENSE-DMXOPL.txt  LICENSE-FMSynth.txt  list-of-banks.txt
fm_banks/ail/: Discworld.opl  LittleBigAdventure.opl  MonopolyDeluxe.ad  MonopolyDeluxe.tmb  MonopolyDeluxe.wopl  StarshipInvasion.opl  SuperStreetFighter2.opl  master_of_magic.wopl  master_of_magic_orchestral.opl  master_of_magic_standard.opl  simfarm.opl
fm_banks/ibk_files/: license.txt
fm_banks/junglevision/: fat4-fixed.wopl
fm_banks/tmb_files/: apogee_duke3d99.tmb  apogee_xenophage.tmb
fm_banks/wopl_files/: Apogee-IMF-90.wopl  GM-By-J.A.Nguyen-and-Wohlstand.wopl  Wohlstand's-modded-FatMan.wopl  fat2.wopl  fatman-2op.wopl  fatman-4op.wopl  msadlib.wopl
fm_banks_new/: Apogee-IMF-90.woplx  DMXOPL3-by-sneakernets-GS.woplx  GM-By-J.A.Nguyen-and-Wohlstand.woplx  LICENSE-IMF90.txt  LICENSE-TheFatMan.txt  bisqwit.woplx  fatman-2op-mod-by-Wohlstand.woplx  fatman-2op.woplx  fatman-4op.woplx  junglevision-2op.woplx
fm_banks_new/ail/: ail-realm.woplx  fatman-2op-ail-default.woplx  fatman-2op-ail-discworld.woplx  fatman-2op-ail-farm.woplx  fatman-2op-ail-soccer.woplx  fatman-2op-ail-starship.woplx  fatman-2op-ail-warcraft2.woplx  fatman-4op-ail-farm.woplx  fatman-4op-ail-guilty.woplx  fatman-4op-ail-little.woplx  fatman-4op-ail-master-o.woplx  fatman-4op-ail-master.woplx  fatman-4op-ail-shock.woplx  fatman-4op-ail-street.woplx  fatman-4op-ail-terra.woplx  fatman-mt32-ail-earth1.woplx  fatman-mt32-ail-earth2.woplx  fatman-mt32-ail-zork.woplx  fatman-mt32.woplx  miles-gm-hospital.woplx  miles-gm-monopoly.woplx  miles-gm-trader.woplx  miles-gm-warcraft.woplx  miles-mt32-bards.woplx  miles-mt32-bucks.woplx  miles-mt32-heroes.woplx  miles-mt32-jagged.woplx  miles-mt32-magic-carpet-2.woplx  miles-mt32-sample.woplx  miles-mt32-soccerman.woplx  miles-mt32-syndicate.woplx  miles-mt32-synwars.woplx  miles-mt32-underworld.woplx
fm_banks_new/apogee/: fatman-2op-apogee-default.woplx  fatman-2op-duke.woplx  fatman-2op-nam.woplx  fatman-2op-warrior.woplx  rott.woplx
fm_banks_new/greyzone/: README.txt  ail-Eric-Heberling-AdvCivil.woplx  ail-Eric-Heberling-Death-Gate.woplx  ail-Eric-Heberling-Nemesis.woplx  ail-battle-chess-4000.woplx  ail-caesar2.woplx  ail-lost-vikings.woplx  ail-megapatch-hockey.woplx  ail-megapatch-probe-ent.woplx  ail-when-two-worlds-war.woplx  apogee-megapatch-blood.woplx  cartooners.woplx  dmx-Bobby-Prince-v1.woplx  dmx-Bobby-Prince-v2.woplx  dmx-Scott-Host.woplx  dmx-Strife.woplx  dmx-default.woplx  hmi-megapatch-aces-of-the-deep.woplx  hmi-megapatch-by-loudmouth.woplx  hmi-megapatch-earthsiege.woplx  ms-adlib.woplx
fm_banks_new/hmi/: fatman-2op-descent.woplx  fatman-2op-hmi-anvil-of-dawn.woplx  fatman-2op-hmi-normality.woplx  fatman-2op-non-gm-descent-ham.woplx  hmi-miles-mt32-park.woplx  (+4 more)
include/: adlmidi.h  adlmidi.hpp  adlmidi_dos.h
src/: adldata.cpp  adldata.cppx  adldata.cxx  adldata.hh  adlmidi.cpp  adlmidi_arr.hpp  adlmidi_bankmap.h  adlmidi_bankmap.tcc  adlmidi_cvt.hpp  adlmidi_db.h  adlmidi_dos.c  adlmidi_load.cpp  adlmidi_midiplay.cpp  adlmidi_midiplay.hpp  adlmidi_opl3.cpp  adlmidi_opl3.hpp  adlmidi_private.cpp  adlmidi_private.hpp  adlmidi_ptr.hpp  adlmidi_sequencer.cpp  cvt_mus2mid.hpp  cvt_xmi2mid.hpp  file_reader.hpp  inst_db.cpp  midi_sequencer.h  midi_sequencer.hpp  midi_sequencer_impl.hpp  oplinst.h
utils/: update-copyright.sh
utils/adlalsaseq/: CMakeLists.txt  adlalsaseq.c
utils/adlmidi-2/: CMakeLists.txt  input.cc  input.hpp  midiplay.cc  puzzlegame.cc
utils/adlmidi-2/cmake/: check-termio.c  check-termios.c
utils/dumpbank/: CMakeLists.txt
utils/dumpmiles/: CMakeLists.txt
utils/dumpwopl/: CMakeLists.txt  dumpwopl.c
utils/midi2vgm/: CMakeLists.txt  midi2vgm.cpp
utils/midi2vgm/compact/: VGMFile.h  chip_cmp.cpp  common.h  vgm_cmp.cpp  vgm_cmp.h  vgm_lib.h  vgm_stdtype.h
utils/mididump/: CMakeLists.txt  mididump.cpp
utils/midiplay/: CMakeLists.txt  adlmidiplay.cpp  audio.h  audio_alsa.c  audio_sdl.c  audio_winmm.c  dev_setup.cpp  dev_setup.h  dos_tman.cpp  dos_tman.h  dos_tman_c.h  misc.c  misc.h  playback.h  playback_audio.cpp  playback_common.cpp  playback_hw_dos.cpp  playback_hw_serial.cpp  playback_wave.cpp  time_counter.cpp  time_counter.h  utf8main_win32.cpp
utils/midiplay/audio/: audio.h  audio_alsa.c  audio_sdl.c  audio_winmm.c
utils/midiplay/playback/: dos_tman.cpp  dos_tman.h  playback.h  playback_audio.cpp  playback_common.cpp  playback_hw_dos.cpp  playback_hw_serial.cpp  playback_wave.cpp  wave_writer.c
utils/mus2mid/: CMakeLists.txt  cvt_mus2mid.hpp
utils/vlc_codec/: CMakeLists.txt  libadlmidi.c
utils/winmm_drv/: CMakeLists.txt
utils/winmm_drv/config/: regconfig.c  regconfig.h
utils/winmm_drv/cpl/: adlconfig.def  adlconfig.rc  adlsetup-tool.c  adlsetup-tool.exe.manifest  adlsetup.c  adlsetup.def  adlsetup.manifest  adlsetup.rc  config_dialog.c  resource.h  setup_dialog.c  setup_dialog.h
utils/winmm_drv/installer/: drvinst.c  drvinst.exe.manifest  libadlmidi_win32drv_setup.cpp  stdafx.cpp
utils/winmm_drv/setup/: regsetup.c  regsetup.h
utils/winmm_drv/src/: MidiSynth.cpp  MidiSynth.h  stdafx.h  targetver.h  winmm_drv.cpp  winmm_drv.def
utils/winmm_drv/test/: test.c
utils/xmi2mid/: CMakeLists.txt  xmi2mid.cpp
(+181 files in other folders)
